# garden

./: Cargo.toml  README.md  memory.x
.cargo/: config
garden-panel/: .envrc  Cargo.toml  Dioxus.toml  rust-toolchain.toml  trace
garden-panel/src/: main.rs  websocket_hook.rs
garden-rx/: Cargo.toml  Cross.toml  docker-compose.yml  rust-toolchain.toml
garden-rx/src/: main.rs  radio.rs
garden-shared/: Cargo.toml
garden-shared/src/: lib.rs
garden-tx/: Cargo.toml  build.rs  flash.sh  rust-toolchain.toml
garden-tx/src/: bme688.rs  lib.rs  main.rs  moisture.rs
src/: main.rs
