[package]
name = "garden-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.5.0"
chrono = "0.4.20"
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.2.4", features = ["web"] }
fermi = "0.2.1"
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
garden-shared = { version = "0.1.0", path = "../garden-shared" }
gloo-timers = { version = "0.2.4", features = ["futures"] }
log = "0.4.17"
reqwasm = "0.5.0"
serde = { version = "1.0.142", default-features = false }
serde_json = { version = "1.0.83", default-features = false }
wasm-bindgen = { version = "0.2.82", default-features = false }
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
