[package]
name = "garden-rx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
linux-embedded-hal = "0.3.2"
postcard = { version = "1.0.0", features = ["alloc", "postcard-derive", "use-std"], default-features = false }
garden-shared = { path = "../garden-shared/" }
uom = { version = "0.33.0", default-features = false, features = ["f32", "u16", "u32", "si", "std"] }
chrono = "0.4.19"
prometheus = { version = "0.13.1", features = ["push"], git = "https://github.com/simmsb/rust-prometheus" }
url = "2.2.2"
once_cell = "1.12.0"
filter = "0.2.0"
nalgebra = "0.21"
embedded_radio = { git = "https://github.com/simmsb/sx127x_lora", version = "1.0.0" }
axum = { version = "0.5.13", features = ["ws"] }
tokio = { version = "1.20.1", features = ["full"] }
serde_json = "1.0.83"
tokio-stream = { version = "0.1.9", features = ["sync"] }
