[package]
name = "garden-rx"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["ws"] }
chrono = "0.4.22"
color-eyre = "0.6.2"
embedded_radio = { git = "https://github.com/simmsb/sx127x_lora", version = "1.0.0" }
futures = "0.3.24"
garden-shared = { path = "../garden-shared/" }
include_dir = "0.7.2"
influxdb2 = { git = "https://github.com/NyCodeGHG/influxdb2", rev = "701a27b725a84b38de403e6df600187904a2fd0b", default-features = false, features = [
  "rustls",
] }
linux-embedded-hal = "0.3.2"
mime_guess = "2.0.4"
once_cell = "1.13.1"
postcard = { version = "1.0.2", features = [
  "alloc",
  "postcard-derive",
  "use-std",
], default-features = false }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tower-http = { version = "0.3.4", features = [
  "decompression-full",
  "compression-full",
  "set-header",
] }
uom = { version = "0.33.0", default-features = false, features = [
  "f32",
  "u16",
  "u32",
  "si",
  "std",
] }
url = "2.2.2"

[features]
testing_echo = []
