[package]
name = "garden-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
fugit = "0.3.6"
heapless = { version = "0.7.15", features = ["serde"] }
micromath = "2.0.0"
serde = { version = "1.0.142", features = ["derive"], default-features = false }
uom = { version = "0.33.0", default-features = false, features = [
  "f32",
  "u16",
  "si",
  "use_serde",
  "u32",
] }
