
[package]
authors = ["Ben Simms <ben@bensimms.moe>"]
name = "garden"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[package.metadata]
chip = "ATSAMD21G18A"

[dependencies]
atomic-polyfill = "0.1.8"
atsamd-hal = { version = "0.15.1", features = [
  "samd21g",
  "samd21g-rt",
  "unproven",
  "rtic",
] }
bit_field = "0.10.1"
cortex-m = { version = "0.7.5", features = ["linker-plugin-lto", "inline-asm"] }
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.2"
critical-section = "0.2.7"
defmt = "0.3.2"
defmt-rtt = { version = "0.3.2", optional = true }
feather_m0 = { version = "0.12.1", features = ["unproven", "rfm", "rtic"] }
fugit = "0.3.6"
heapless = { version = "0.7.13", features = ["serde"] }
# lorawan = { version = "0.7.1", default-features = false, features = ["defmt"] }
# lorawan-device = "0.7.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }
postcard = "1.0.0"
serde = { version = "1.0.137", default-features = false }
sx127x_lora = "0.3.1"
garden-shared = { path = "../garden-shared/" }
uom = { version = "0.33.0", default-features = false, features = [
  "f32",
  "u16",
  "u32",
  "si",
] }
drogue-bme680 = "0.3.0"
micromath = "2.0.0"


[features]
default = ["debugger"]
debugger = ["panic-probe", "defmt-rtt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 1           # <-
overflow-checks = true  # <-
# # cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = 'false'
opt-level = 3           # <-
overflow-checks = false # <-
